Install texlive-lang-cjk for PDF build

--- a/.github/workflows/build_pdf.yml
+++ b/.github/workflows/build_pdf.yml
@@ -15,7 +15,7 @@ jobs:
       - name: Install Pandoc and LaTeX
         run: |
           sudo apt-get update
-          sudo apt-get install -y pandoc texlive-xetex fonts-noto-cjk
+          sudo apt-get install -y pandoc texlive-xetex texlive-lang-cjk fonts-noto-cjk
       - name: Combine Markdown files
         run: |
           mkdir -p build
