--- a/.github/workflows/build_pdf.yml
+++ b/.github/workflows/build_pdf.yml
@@ -22,17 +22,14 @@ jobs:
       - name: Install Pandoc and LaTeX
         run: |
           sudo apt-get update
-          sudo apt-get install -y pandoc texlive-xetex texlive-lang-cjk fonts-noto-cjk
+          sudo apt-get install -y pandoc texlive-xetex texlive-lang-japanese fonts-noto-cjk
       - name: Combine Markdown files
         run: |
           mkdir -p build
           ls chapters/*.md | sort | xargs cat > build/book.md
       - name: Convert to PDF
         run: |
-          pandoc build/book.md -o build/book.pdf \
-            --pdf-engine=xelatex \
-            --toc \
-            -V CJKmainfont=NotoSansCJKjp-Regular
+          pandoc build/book.md --defaults pandoc/latex.yaml -o build/book.pdf
       - name: Upload artifact
         uses: actions/upload-artifact@v4
         with:
