--- a/.github/workflows/build_pdf.yml
+++ b/.github/workflows/build_pdf.yml
@@ -36,8 +36,8 @@ jobs:
             fonts-noto-cjk
           
           # 美しいフォントの追加インストール
-          # Libertinus フォント（Linuxで代替としてLibertineを使用）
-          sudo apt-get install -y fonts-libertine
+          # Libertinus フォント（Linuxではfonts-linuxlibertineが該当）
+          sudo apt-get install -y fonts-linuxlibertine
           
           # JetBrains Mono フォント
           wget -O jetbrains-mono.zip https://download.jetbrains.com/fonts/JetBrainsMono-2.304.zip
