--- a/pandoc/latex.yaml
+++ b/pandoc/latex.yaml
@@ -1,8 +1,8 @@
 pdf-engine: xelatex
 include-in-header:
   - pandoc/header.tex
-# Luaフィルターの追加
-lua-filter:
+# Luaフィルターの追加（複数形に修正）
+lua-filters:
   - pandoc/codeblock-filter.lua
 variables:
   documentclass: book
