--- a/pandoc/latex.yaml
+++ b/pandoc/latex.yaml
@@ -8,11 +8,12 @@ variables:
     - oneside
     - 11pt
   papersize: a4
-  # フォント設定
-  CJKmainfont: "Noto Serif CJK JP"
-  mainfont: "Libertinus Serif"
-  sansfont: "Libertinus Sans"
-  monofont: "JetBrains Mono"
+  # フォント設定（Ubuntu環境対応）
+  # システムにフォントがない場合はコメントアウト
+  # CJKmainfont: "Noto Serif CJK JP"
+  # mainfont: "Liberation Serif"
+  # sansfont: "Liberation Sans"
+  # monofont: "Liberation Mono"
   # リンク設定
   colorlinks: true
   linkcolor: "blue!80!black"
