--- a/.github/workflows/build_pdf.yml
+++ b/.github/workflows/build_pdf.yml
@@ -53,8 +53,15 @@ jobs:
           sudo cp Libertinus-7.040/static/TTF/*.ttf /usr/share/fonts/truetype/libertinus/ || true
           
           # フォントのインストール確認
-          echo "Available fonts:"
-          fc-list | grep -i "liberation\|noto\|libertinus" | head -20
+          echo "Available fonts (詳細):"
+          echo "=== Noto CJK fonts ==="
+          fc-list | grep -i "noto.*cjk" | head -10
+          echo "=== Libertinus fonts ==="
+          fc-list | grep -i "libertinus" | head -10
+          echo "=== JetBrains fonts ==="
+          fc-list | grep -i "jetbrains" | head -10
+          echo "=== Available serif fonts ==="
+          fc-list | grep -i "serif" | head -10
           
           # JetBrains Monoフォントのインストール
           wget -O jetbrains-mono.zip https://download.jetbrains.com/fonts/JetBrainsMono-2.304.zip
@@ -80,6 +87,11 @@ jobs:
           wc -l build/book.md
           echo "First 10 lines of input:"
           head -10 build/book.md
+          
+          # 簡単な日本語テスト
+          echo "# 日本語テスト\n\n日本語が正しく表示されているかテストします。\n\n## セクション\n\n**太字**の日本語テキスト。" > test-japanese.md
+          echo "Testing basic Japanese rendering..."
+          pandoc test-japanese.md --pdf-engine=xelatex --include-in-header=pandoc/header.tex -o test-japanese.pdf --verbose || echo "Japanese test failed"
           
           # まずluaフィルターなしで詳細なログを出力してテスト
           echo "Testing PDF generation without lua filter (verbose mode)..."
@@ -112,7 +124,11 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: book-pdf
-          path: build/book.pdf
+          path: |
+            build/book.pdf
+            test-japanese.pdf
+            build/book-test.pdf
+            build/book-minimal.pdf
           
       - name: Create Release and attach PDF
         uses: softprops/action-gh-release@v1
