Fix HiraMinProN font issue - Remove hiragino-pron preset causing font not found error - Add reliable Japanese fonts to Docker image - Simplify header.tex to use luatexja defaults - Add font verification in GitHub Actions

--- a/.github/workflows/build_pdf.yml
+++ b/.github/workflows/build_pdf.yml
@@ -31,6 +31,8 @@ jobs:
         run: |
           docker run --rm texlive-pandoc pandoc --version
           docker run --rm texlive-pandoc lualatex --version
+          echo "Available Japanese fonts:"
+          docker run --rm texlive-pandoc fc-list | grep -E "(Noto|Takao|VL|Gothic|Mincho)" | head -10
           
       - name: Combine Markdown files
         run: |
