--- a/.github/workflows/build_pdf.yml
+++ b/.github/workflows/build_pdf.yml
@@ -12,6 +12,9 @@ on:
         required: true
         type: string
 
+env:
+  DOCKER_BUILDKIT: 1
+
 jobs:
   build:
     permissions:
@@ -23,9 +26,16 @@ jobs:
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
         
-      - name: Build Docker image
+      - name: Build Docker image with cache
         run: |
-          docker build -t texlive-pandoc .
+          echo "Starting Docker build with BuildKit cache..."
+          docker buildx build \
+            --cache-from type=gha \
+            --cache-to type=gha,mode=max \
+            --load \
+            --progress=plain \
+            -t texlive-pandoc .
+          echo "Docker build completed!"
           
       - name: Verify Docker environment
         run: |
@@ -44,6 +54,7 @@ jobs:
           
       - name: Convert to PDF
         run: |
+          echo "Starting PDF generation..."
           docker run --rm -v ${{ github.workspace }}:/workspace texlive-pandoc \
             pandoc build/book.md --defaults pandoc/latex.yaml --lua-filter pandoc/codeblock-filter.lua -o build/book.pdf --verbose
           
