fix: GitHub ActionsでMarkdown結合スクリプトを使用するよう修正 - build_pdf.ymlワークフローを更新し、scripts/combine_chapters.shスクリプトを使用 - これによりGitHub Actions環境でも見出しの改行問題が解決される

--- a/.github/workflows/build_pdf.yml
+++ b/.github/workflows/build_pdf.yml
@@ -48,8 +48,8 @@ jobs:
           
       - name: Combine Markdown files
         run: |
-          mkdir -p build
-          ls chapters/*.md | sort | xargs cat > build/book.md
+          chmod +x scripts/combine_chapters.sh
+          ./scripts/combine_chapters.sh
           echo "Combined file size: $(wc -l build/book.md) lines"
           
       - name: Convert to PDF
