feat: 表紙の著者名とコミット日付を動的設定に変更 - 著者名をphytenに変更 - AIツール使用情報を英語で追加 - コミット日付を動的に取得するスクリプトを追加 - GitHub Actionsでもコミット日付が正しく反映されるよう修正

--- a/.github/workflows/build_pdf.yml
+++ b/.github/workflows/build_pdf.yml
@@ -46,6 +46,11 @@ jobs:
           echo "tcolorbox package availability:"
           docker run --rm texlive-pandoc kpsewhich tcolorbox.sty
           
+      - name: Update commit date in PDF metadata
+        run: |
+          chmod +x scripts/update_commit_date.sh
+          ./scripts/update_commit_date.sh
+          
       - name: Combine Markdown files
         run: |
           chmod +x scripts/combine_chapters.sh
