--- a/pandoc/latex.yaml
+++ b/pandoc/latex.yaml
@@ -25,8 +25,8 @@ variables:
   # メタデータ
   title: "Codex Research Manual"
   subtitle: "技術書のためのリサーチマニュアル"
-  author: "Author Name"
-  date: "\\today"
+  author: "phyten"
+  date: "Written with manus, Gemini Pro 2.5, ChatGPT o3, and Claude 4\\\\2025年05月24日"
 # コマンドラインオプション
 top-level-division: chapter
 number-sections: true
