fix: LaTeXエスケープ文字エラーを修正 - dateフィールドの\\\\を\newlineに変更してLaTeXエラーを解決 - colorlinks設定のコメントアウトを復元 - update_commit_date.shスクリプトも対応する修正を実施

--- a/pandoc/latex.yaml
+++ b/pandoc/latex.yaml
@@ -26,7 +26,7 @@ variables:
   title: "Codex Research Manual"
   subtitle: "技術書のためのリサーチマニュアル"
   author: "phyten"
-  date: "Written with manus, Gemini Pro 2.5, ChatGPT o3, and Claude 4\\\\2025年05月24日"
+  date: "Written with manus, Gemini Pro 2.5, ChatGPT o3, and Claude 4\\newline2025年05月24日"
 # コマンドラインオプション
 top-level-division: chapter
 number-sections: true
