feat: 表紙のサブタイトルを内容に適した「OpenAI Codex 活用ガイド」に変更 - 「技術書のためのリサーチマニュアル」から「OpenAI Codex 活用ガイド」に変更 - 文書の実際の内容により適切なサブタイトルに修正

--- a/pandoc/latex.yaml
+++ b/pandoc/latex.yaml
@@ -24,9 +24,8 @@ variables:
   listings: true
   # メタデータ
   title: "Codex Research Manual"
-  subtitle: "技術書のためのリサーチマニュアル"
+  subtitle: "OpenAI Codex 活用ガイド"
   author: "phyten"
-  date: "Written with manus, Gemini Pro 2.5, ChatGPT o3, and Claude 4\\newline2025年05月24日"
 # コマンドラインオプション
 top-level-division: chapter
 number-sections: true
